apps/monitoring/grafana/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - name: grafana
      port: 3000
      protocol: TCP
      targetPort: grafana

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: grafana
          image: "docker.io/grafana/grafana:10.3.3"
          ports:
            - containerPort: 3000
              name: grafana
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-pv
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]

      securityContext:
        runAsNonRoot: true
        runAsUser: 17330
        runAsGroup: 17330
        fsGroup: 17330
        seccompProfile:
          type: RuntimeDefault

      volumes:
        - name: grafana-pv
          persistentVolumeClaim:
            claimName: grafana-pvc
